# cubiczan-ml

./: .gitignore  Cargo.toml  README.md  cubiczan-ml-deck.html  index.html  pyproject.toml
.github/workflows/: publish.yml
crates/autonomous-business-os/: Cargo.toml
crates/autonomous-business-os/src/: approval.rs  audit.rs  lib.rs  orchestrator.rs  pipeline.rs  rate_limit.rs  scoring.rs  security.rs  state_machine.rs  types.rs
crates/chainsight-ai/: Cargo.toml
crates/chainsight-ai/src/: alert.rs  detect.rs  ingest.rs  lib.rs  pipeline.rs  store.rs  types.rs
crates/closed-loop-finance/: Cargo.toml
crates/closed-loop-finance/src/: controller.rs  decider.rs  executor.rs  learner.rs  lib.rs  observer.rs  pipeline.rs  risk_manager.rs  types.rs
crates/commodity-price-analyzer/: Cargo.toml
crates/commodity-price-analyzer/src/: forecast.rs  lib.rs  pipeline.rs  prices.rs  risk.rs  seasonal.rs  signals.rs  supply_demand.rs  types.rs
crates/consensus-hardening-protocol/: Cargo.toml
crates/consensus-hardening-protocol/benches/: chp_bench.rs
crates/consensus-hardening-protocol/src/: context.rs  contracts.rs  devil.rs  dossier.rs  foundation.rs  gates.rs  lib.rs  models.rs  orchestrator.rs  parity.rs  parser.rs  payloads.rs  registry.rs  rounds.rs  superserve_bridge.rs  validators.rs
crates/convergence/: Cargo.toml
crates/convergence/src/: kpi.rs  lib.rs  pipeline.rs  reconcile.rs  report.rs  track.rs  types.rs
crates/courtvision-ai/: Cargo.toml
crates/courtvision-ai/src/: betting.rs  lib.rs  pipeline.rs  player.rs  predictions.rs  stats.rs  types.rs
crates/critmin-oracle/: Cargo.toml
crates/critmin-oracle/benches/: oracle_bench.rs
crates/critmin-oracle/src/: config.rs  forecast.rs  lib.rs  macro_data.rs  main.rs  pipeline.rs  prices.rs  scaling.rs  sentiment.rs
crates/cubiczan-ml-core/: Cargo.toml
crates/cubiczan-ml-core/src/: device.rs  error.rs  lib.rs  math.rs  metrics.rs  normalization.rs  preprocessing.rs  risk.rs  signal.rs  time_series.rs  utils.rs
crates/cubiczan-ml-dl/: Cargo.toml
crates/cubiczan-ml-dl/src/: burn_backend.rs  inference.rs  lib.rs  models.rs  on_chain.rs  time_series.rs
crates/cubiczan-ml-nlp/: Cargo.toml
crates/cubiczan-ml-nlp/src/: classifier.rs  embeddings.rs  lib.rs  ner.rs  sentiment.rs  summarizer.rs  tokenizer.rs
crates/cubiczan-ml-py/: Cargo.toml  README.md  pyproject.toml
crates/cubiczan-ml-py/src/: core.rs  dl.rs  lib.rs  nlp.rs  rl.rs  tf.rs
crates/cubiczan-ml-rl/: Cargo.toml
crates/cubiczan-ml-rl/src/: agents.rs  backtest.rs  environment.rs  exploration.rs  lib.rs  policy.rs
crates/cubiczan-ml-tf/: Cargo.toml
crates/cubiczan-ml-tf/src/: bridge.rs  lib.rs  models.rs  session.rs
crates/cubiczan-superserve/: Cargo.toml
crates/cubiczan-superserve/src/: chp.rs  client.rs  error.rs  lib.rs  models.rs  templates.rs
crates/cubiczan-superserve/tests/: models_and_errors.rs
crates/cubiczan-swarm-pack/: Cargo.toml
crates/cubiczan-swarm-pack/src/: consensus.rs  governance.rs  lib.rs  stigmergy.rs  task_dag.rs  types.rs
crates/finflowrl/: Cargo.toml  WORKLOG.md
crates/finflowrl/benches/: finflowrl_bench.rs
crates/finflowrl/src/: config.rs  lib.rs
crates/finflowrl/src/agents/: mod.rs  ppo.rs
crates/finflowrl/src/envs/: hft_env.rs  mod.rs
crates/finflowrl/src/evaluation/: metrics.rs  mod.rs
crates/finflowrl/src/experts/: avellaneda_stoikov.rs  glft.rs  glft_drift.rs  mod.rs
crates/finflowrl/src/models/: film.rs  meanflow.rs  mod.rs  noise.rs
crates/finflowrl/src/simulator/: market.rs  mod.rs
crates/finflowrl/src/training/: finetune.rs  mod.rs  pretrain.rs
crates/market-sentiment-fedgpt/: Cargo.toml
crates/market-sentiment-fedgpt/src/: brief.rs  lib.rs  parser.rs  pipeline.rs  risk.rs  tone.rs  types.rs
crates/metabocommand-kernel/: Cargo.toml
crates/metabocommand-kernel/src/: csv_builder.rs  escalation.rs  lib.rs  types.rs  velocity.rs
crates/minescope-kernel/: Cargo.toml
crates/minescope-kernel/src/: lib.rs  pricing.rs  prospectivity.rs  risk.rs  types.rs
crates/minescope-signal/: Cargo.toml
crates/minescope-signal/src/: anomaly.rs  equipment.rs  fft.rs  grading.rs  lib.rs  pipeline.rs  processing.rs  sensors.rs  types.rs
crates/resilient-call/: Cargo.toml
crates/resilient-call/src/: retry.rs
crates/scope-glacier/: Cargo.toml
crates/scope-glacier/src/: analytics.rs  forecast.rs  ingest.rs  lib.rs  pipeline.rs  timeseries.rs  types.rs
crates/scope-sentinel/: Cargo.toml
crates/scope-sentinel/src/: edgar.rs  lib.rs  metrics.rs  pipeline.rs  portfolio.rs  signal.rs  types.rs
crates/scope-vantage/: Cargo.toml
crates/scope-vantage/src/: commodity.rs  graph.rs  lib.rs  pipeline.rs  risk.rs  trade.rs  types.rs
crates/sec-earnings-workbench/: Cargo.toml
crates/sec-earnings-workbench/src/: earnings.rs  financials.rs  insider.rs  lib.rs  parser.rs  pipeline.rs  risk.rs  sentiment.rs  types.rs
crates/swarmfi-perps/: Cargo.toml
crates/swarmfi-perps/benches/: swarmfi_bench.rs
crates/swarmfi-perps/src/: agents.rs  alerts.rs  arbitrage.rs  backtest.rs  compliance.rs  consensus.rs  dydx.rs  lib.rs  main.rs  math.rs  mobile.rs  pipeline.rs  types.rs  vault.rs  websocket.rs
