[workspace]
resolver = "2"
members = [
    "crates/cubiczan-ml-core",
    "crates/cubiczan-ml-nlp",
    "crates/cubiczan-ml-dl",
    "crates/cubiczan-ml-rl",
    "crates/cubiczan-ml-tf",
    "crates/cubiczan-ml-py",
    "crates/finflowrl",
    "crates/critmin-oracle",
    "crates/consensus-hardening-protocol",
    "crates/swarmfi-perps",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shyam Desigan <sam@cubiczan.com>"]
license = "MIT"
repository = "https://github.com/cubiczan/cubiczan-ml"
description = "Shared Rust ML layer for Cubiczan AI/DeFi/Finance ecosystem"

[workspace.dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
num-traits = "0.2"
num = "0.4"
statrs = "0.18"
nalgebra = "0.33"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha3 = "0.10"
hex = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
