[workspace]
resolver = "2"
members = [
    "crates/cubiczan-ml-core",
    "crates/cubiczan-ml-nlp",
    "crates/cubiczan-ml-dl",
    "crates/cubiczan-ml-rl",
    "crates/cubiczan-ml-tf",
    "crates/cubiczan-ml-py",
    "crates/finflowrl",
    "crates/critmin-oracle",
    "crates/consensus-hardening-protocol",
    "crates/swarmfi-perps",
    "crates/courtvision-ai",
    "crates/greenverify-ai",
    "crates/sec-earnings-workbench",
    "crates/closed-loop-finance",
    "crates/minescope-signal",
    "crates/commodity-price-analyzer",
    "crates/autonomous-business-os",
    "crates/cubiczan-swarm-pack",
    "crates/minescope-kernel",
    "crates/metabocommand-kernel",
    "crates/chainsight-ai",
    "crates/scope-glacier",
    "crates/scope-sentinel",
    "crates/hedge-fund-13f-radar",
    "crates/scope-vantage",
    "crates/convergence",
    "crates/market-sentiment-fedgpt",
    "crates/cubiczan-superserve",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shyam Desigan <sam@cubiczan.com>"]
license = "MIT"
repository = "https://github.com/icohangar-ops/cubiczan-ml"
description = "Shared Rust ML layer for Cubiczan AI/DeFi/Finance ecosystem"

[workspace.dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
num-traits = "0.2"
num = "0.4"
statrs = "0.18"
nalgebra = "0.33"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha3 = "0.10"
hex = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
eventsource-stream = "0.2"
cubiczan-superserve = { path = "crates/cubiczan-superserve" }
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"

# ============================================================================
# Tier 2: Optimized release profiles
# ============================================================================

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug-assertions = false
overflow-checks = false

# Tier 2: Lean release for CI / fast builds (still optimized)
[profile.release-ci]
inherits = "release"
lto = "thin"
codegen-units = 4
strip = false

# Tier 3: Max throughput (no strip, keeps symbols for profiling)
[profile.release-bench]
inherits = "release"
strip = false
debug = true
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
