[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cubiczan-ml"
version = "0.1.0"
description = "High-performance ML library for finance/DeFi — Rust-powered Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Shyam Desigan", email = "sam@cubiczan.com" },
]
keywords = ["ml", "finance", "defi", "trading", "nlp", "reinforcement-learning", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/icohangar-ops/cubiczan-ml"
Repository = "https://github.com/icohangar-ops/cubiczan-ml"
Documentation = "https://github.com/icohangar-ops/cubiczan-ml#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cubiczan_ml"
include = ["README.md"]

[tool.maturin.target.x86_64-unknown-linux-gnu]
manylinux = "2_34"
