[package]
name = "autonomous-business-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Security-critical Rust core for Autonomous Business OS: approval engine, audit trail, rate limits, circuit breakers, signed event ledger"

[dependencies]
cubiczan-ml-core = { path = "../cubiczan-ml-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = { workspace = true }
