[package]
name = "chainsight-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "On-chain anomaly detection engine for DeFi ecosystems"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
statrs = { workspace = true }
ndarray = { workspace = true }
