[package]
name = "consensus-hardening-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Consensus Hardening Protocol (CHP) — Rust port. Decision governance for multi-agent AI systems."
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
cubiczan-superserve = { path = "../cubiczan-superserve", optional = true }
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[lib]
name = "chp"
path = "src/lib.rs"

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
superserve = ["dep:cubiczan-superserve", "dep:tokio", "dep:reqwest"]

[[bench]]
name = "chp_bench"
harness = false
