[package]
name = "cubiczan-ml-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
approx = "0.5"
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
statrs = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
