[package]
name = "cubiczan-ml-rl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cubiczan-ml-core = { path = "../cubiczan-ml-core" }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = "0.9"
chrono = { workspace = true }
