[package]
name = "cubiczan-ml-tf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cubiczan-ml-core = { path = "../cubiczan-ml-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
num_cpus = "1"
ndarray = { workspace = true, features = ["serde"] }
