[package]
name = "cubiczan-superserve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Typed Rust client for the Superserve.ai persistent sandbox API"

[[bin]]
name = "cz-serve"
path = "src/bin/cz-serve.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
