[package]
name = "cubiczan-swarm-pack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Swarm intelligence core: DAG planning, stigmergic coordination, governance policy engine, LMSR consensus, Solana CLI classification"

[dependencies]
cubiczan-ml-core = { path = "../cubiczan-ml-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = { workspace = true }
rand = { workspace = true }
