[package]
name = "finflowrl"
version = "0.1.0"
edition = "2021"
authors = ["FinFlowRL Team"]
license = "MIT"
description = "Flow-Matching Reinforcement Learning for High-Frequency Trading — pure-Rust port"

[dependencies]
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

# Tier 3: BLAS-accelerated mat-vec (uncomment when cmake + openblas-dev available)
# [dependencies.ndarray]
# workspace = true
# features = ["blas"]
# [dependencies.blas-src]
# version = "0.10"
# default-features = false
# features = ["openblas"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "finflowrl_bench"
harness = false
