[package]
name = "metabocommand-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure computation kernels for commerce escalation, velocity scoring, and CSV generation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
