[package]
name = "scope-glacier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Energy markets intelligence — EIA data analytics and forecasting"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
statrs = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
