[package]
name = "scope-sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REIT analytics intelligence — SEC EDGAR analysis and portfolio signals"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
statrs = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
