[package]
name = "swarmfi-perps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SwarmFi Perps — Rust port. AI agent swarm intelligence for perpetual futures markets."
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
tokio = { workspace = true, features = ["sync", "macros", "rt", "time", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }

[lib]
name = "swarmfi_perps"
path = "src/lib.rs"

[[bin]]
name = "swarmfi-perps"
path = "src/main.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
criterion = { workspace = true }

[features]
default = []

[[bench]]
name = "swarmfi_bench"
harness = false
